--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "prepublishOnly": "npm test && npm run lint && npm run build",
-    "build": "tsc",
+    "build": "node scripts/build.js",
+    "build:typescript": "tsc",
     "lint": "tslint -p tsconfig.json -c tslint.json --exclude '**/*.d.ts'",
     "test": "jest --silent",
     "coverage": "npm test -- --coverage",
@@ -37,12 +38,15 @@
     "@types/moment": "^2.13.0",
     "@types/node": "^10.9.2",
     "codecov": "^3.0.4",
+    "fs-readdir-recursive": "^1.1.0",
     "jest": "^23.5.0",
     "mockdate": "^2.0.2",
     "moment": "^2.22.2",
+    "rimraf": "^2.6.2",
     "ts-jest": "^23.1.4",
     "tslint": "^5.11.0",
-    "typescript": "^3.0.1"
+    "typescript": "^3.0.1",
+    "uglify-es": "^3.3.9"
   },
   "jest": {
     "moduleFileExtensions": [
