--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jest": "^23.5.0",
     "mockdate": "^2.0.2",
     "moment": "^2.22.2",
+    "moment-jalaali": "^0.7.4",
     "rimraf": "^2.6.2",
     "ts-jest": "^23.1.4",
     "tslint": "^5.11.0",
