--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "carbonjs",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "Javascript date library alternative to Moment.js with the same modern API",
   "author": "Ardalan Amini <ardalanamini22@gmail.com> [https://github.com/ardalanamini]",
   "homepage": "https://github.com/ardalanamini/carbonjs#readme",
@@ -19,10 +19,16 @@
     "moment",
     "date",
     "time",
-    "immutable"
+    "immutable",
+    "calendar",
+    "islamic",
+    "jalaali"
   ],
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "prepublishOnly": "npm test && npm run lint && npm run build",
     "build": "node scripts/build.js",
@@ -36,7 +42,7 @@
     "@types/jest": "^23.3.1",
     "@types/mockdate": "^2.0.0",
     "@types/moment": "^2.13.0",
-    "@types/node": "^10.9.2",
+    "@types/node": "^10.9.4",
     "codecov": "^3.0.4",
     "fs-readdir-recursive": "^1.1.0",
     "jest": "^23.5.0",
@@ -47,7 +53,7 @@
     "rimraf": "^2.6.2",
     "ts-jest": "^23.1.4",
     "tslint": "^5.11.0",
-    "typescript": "^3.0.1",
+    "typescript": "^3.0.3",
     "uglify-es": "^3.3.9"
   },
   "jest": {
