--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,15 +4,11 @@
     "module": "commonjs",
     "target": "es6",
     "rootDir": "src",
-    "outDir": "dist",
+    "outDir": "lib",
     "declaration": true,
     "strict": true
   },
   "include": [
     "src/**/*"
-  ],
-  "exclude": [
-    "**/test.ts",
-    "**/*.test.ts"
   ]
 }
